--- a/index.html
+++ b/index.html
@@ -561,6 +561,242 @@
             </form>
           </div>
         </div>
+
+        <div class="row">
+          <div class="col-sm-4">
+            <section class="product-section product-user-gallery">
+              <header class="product-section-header">
+                <h1 class="title">유저들의 스타일링샷</h1>
+                <strong class="badge" aria-label="461개">461</strong>
+                <a class="icon-button is-right" href="/" aria-label="더보기">
+                  <i class="ic-chevron" aria-hidden></i>
+                </a>
+              </header>
+              <div class="product-section-content">
+                <div class="user-gallery is-mobile" role="region">
+                  <div class="user-gallery-slider">
+                    <ol class="slider-list">
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-1"
+                      >
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-01.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden">
+                              김데이 님의 스타일링샷
+                            </figcaption>
+                          </figure>
+
+                          <div class="gallery-card-detail">
+                            <a class="avatar-32" href="/">
+                              <img
+                                src="./assets/images/img-user-01.jpg"
+                                alt="김데이"
+                              />
+                            </a>
+                            <a class="user-name" href="/">김데이</a>
+                            <span class="order">1/461</span>
+                          </div>
+                        </div>
+                      </li>
+
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-2"
+                      >
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-02.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden">
+                              마멜 님의 스타일링샷
+                            </figcaption>
+                          </figure>
+
+                          <div class="gallery-card-detail">
+                            <a class="avatar-32" href="/">
+                              <img
+                                src="./assets/images/img-user-02.jpg"
+                                alt="마멜"
+                              />
+                            </a>
+                            <a class="user-name" href="/">마멜</a>
+                            <span class="order">2/461</span>
+                          </div>
+                        </div>
+                      </li>
+
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-3"
+                      >
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-03.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden">
+                              시나모롤 님의 스타일링샷
+                            </figcaption>
+                          </figure>
+
+                          <div class="gallery-card-detail">
+                            <a class="avatar-32" href="/">
+                              <img
+                                src="./assets/images/img-user-03.png"
+                                alt="시나모롤"
+                              />
+                            </a>
+                            <a class="user-name" href="/">시나모롤</a>
+                            <span class="order">3/461</span>
+                          </div>
+                        </div>
+                      </li>
+
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-4"
+                      >
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-04.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden">
+                              포차코 님의 스타일링샷
+                            </figcaption>
+                          </figure>
+
+                          <div class="gallery-card-detail">
+                            <a class="avatar-32" href="/">
+                              <img
+                                src="./assets/images/img-user-04.png"
+                                alt="포차코"
+                              />
+                            </a>
+                            <a class="user-name" href="/">포차코</a>
+                            <span class="order">4/461</span>
+                          </div>
+                        </div>
+                      </li>
+
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-5"
+                      >
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-05.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden">
+                              쿠로미 님의 스타일링샷
+                            </figcaption>
+                          </figure>
+
+                          <div class="gallery-card-detail">
+                            <a class="avatar-32" href="/">
+                              <img
+                                src="./assets/images/img-user-05.png"
+                                alt="쿠로미"
+                              />
+                            </a>
+                            <a class="user-name" href="/">쿠로미</a>
+                            <span class="order">5/461</span>
+                          </div>
+                        </div>
+                      </li>
+                    </ol>
+                  </div>
+
+                  <div class="user-gallery-thumbnail">
+                    <ol class="thumbnail-list" role="tablist">
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-1"
+                        role="tab"
+                      >
+                        <button type="button">
+                          <img
+                            src="./assets/images/img-review-01.jpg"
+                            alt="1번 스타일링샷"
+                          />
+                        </button>
+                      </li>
+
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-2"
+                        role="tab"
+                      >
+                        <button type="button">
+                          <img
+                            src="./assets/images/img-review-02.jpg"
+                            alt="2번 스타일링샷"
+                          />
+                        </button>
+                      </li>
+
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-3"
+                        role="tab"
+                      >
+                        <button type="button">
+                          <img
+                            src="./assets/images/img-review-03.jpg"
+                            alt="3번 스타일링샷"
+                          />
+                        </button>
+                      </li>
+
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-4"
+                        role="tab"
+                      >
+                        <button type="button">
+                          <img
+                            src="./assets/images/img-review-04.jpg"
+                            alt="4번 스타일링샷"
+                          />
+                        </button>
+                      </li>
+
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-5"
+                        role="tab"
+                      >
+                        <button type="button">
+                          <img
+                            src="./assets/images/img-review-05.jpg"
+                            alt="5번 스타일링샷"
+                          />
+                        </button>
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+              </div>
+            </section>
+            <div class="product-section-divider sm-only" aria-hidden></div>
+          </div>
+        </div>
       </div>
 
       <div class="product-tab">
@@ -627,7 +863,7 @@
                 </a>
               </header>
               <div class="product-section-content">
-                <div class="user-gallery" role="region">
+                <div class="user-gallery is-desktop" role="region">
                   <div class="user-gallery-slider">
                     <ol class="slider-list">
                       <li
@@ -865,7 +1101,6 @@
                 </div>
               </div>
             </section>
-            <div class="product-section-divider sm-only" aria-hidden></div>
 
             <section
               class="product-section product-spec is-open"
