--- a/index.html
+++ b/index.html
@@ -2340,7 +2340,7 @@
           </div>
         </div>
 
-        <div class="drawer-menu is-store is-active is-open">
+        <div class="drawer-menu is-store">
           <button class="drawer-menu-button" type="button">
             <i class="ic-store" aria-hidden></i>
             스토어
@@ -2633,5 +2633,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="./js/carousels.js"></script>
     <script src="./js/sidebar.js"></script>
+    <script src="./js/sidebar-drawer.js"></script>
   </body>
 </html>
