--- a/index.html
+++ b/index.html
@@ -2631,5 +2631,6 @@
     <script src="./js/sidebar.js"></script>
     <script src="./js/sidebar-drawer.js"></script>
     <script src="./js/section-header.js"></script>
+    <script src="./js/search-modal.js"></script>
   </body>
 </html>
