--- a/index.html
+++ b/index.html
@@ -1347,7 +1347,7 @@
                         </button>
 
                         <p>
-                          <strong><span>7</span>명</strong>에게 도움이
+                          <strong><span>3</span>명</strong>에게 도움이
                           되었습니다.
                         </p>
                       </footer>
@@ -2629,5 +2629,6 @@
     <script src="./js/order-cta.js"></script>
     <script src="./js/my-menu.js"></script>
     <script src="./js/gnb-search.js"></script>
+    <script src="./js/review.js"></script>
   </body>
 </html>
